# mcpforge-monorepo

./: .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  MCPForge_PRD.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  render.yaml  tsconfig.base.json  turbo.json  vercel.json
apps/api/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  alembic.ini  pyproject.toml  render.yaml  start-dev.sh  start.sh  test.db-journal
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_add_ai_enhancement.py  0003_add_tool_calls.py  0004_add_security_scans.py  0005_add_teams.py  0006_add_api_keys.py  0007_add_billing.py  0009_add_spec_sources.py  0010_add_password_changed_at.py  0011_credential_auth_fields.py  a442dec80a86_sync_schema_with_models.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/core/: __init__.py  celery_app.py  config.py  database.py  encryption.py  exceptions.py  llm_client.py  logging.py  r2_client.py  redis.py  s3_client.py  security.py  sse.py
apps/api/app/gateway/: analytics_bridge.py  auth_header_builder.py  errors.py  mcp_server.py  rate_limiter.py  response_handler.py  session.py  ssrf_guard.py  tool_dispatcher.py  tool_executor.py  transport_http.py  transport_sse.py
apps/api/app/models/: __init__.py  api_key.py  audit_log.py  base.py  billing.py  credential.py  mcp_server.py  security.py  server_version.py  spec.py  team.py  tool_call.py  tool_edit_history.py  user.py
apps/api/app/playground/: ws.py
apps/api/app/repositories/: analytics_repo.py  api_key_repo.py  billing_repo.py  credential_repo.py  mcp_server_repo.py  security_repo.py  spec_repo.py  team_repo.py  user_repo.py
apps/api/app/schemas/: __init__.py  ai_description.py  analytics.py  api_key.py  auth.py  billing.py  common.py  credential.py  gateway.py  mcp_protocol.py  mcp_server.py  openapi_spec.py  playground.py  security.py  team.py  tool.py  user.py
apps/api/app/services/: ai_description_engine.py  api_key_service.py  auth_service.py  credential_service.py  email_service.py  mcp_server_service.py  openapi_fetcher.py  server_builder.py  server_config_cache.py  spec_analyzer.py  team_service.py  user_service.py  (+1 more)
apps/api/tests/: conftest.py  e2e_real_stack.py  e2e_security_scanner.py  test_ai_celery_tasks.py  test_ai_description_engine.py  test_ai_prompts.py  test_analytics_aggregator.py  test_analytics_description_performance.py  test_analytics_endpoints.py  test_analytics_partition_manager.py  test_analytics_queries.py  test_analytics_recorder.py  test_analytics_repository.py  test_api_key_service.py  test_auth.py  test_auth_email.py  test_auth_header_builder.py  test_billing.py  test_build_endpoints.py  test_credential_repo.py  test_credential_service.py  test_credentials_endpoints.py  test_csrf.py  test_encryption.py  test_gateway_admin.py  test_gateway_e2e.py  test_health.py  test_hibp.py  test_integration_f2.py  test_llm_client.py  test_lockout.py  test_logging.py  test_oauth_github.py  test_openapi_fetcher.py  test_playground.py  test_quality_scorer.py  test_r2_client.py  test_rate_limiter.py  test_real_gateway.py  test_response_handler.py  (+22 more)
(+311 files in other folders)
